--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,21 +13,6 @@
     <!-- for reuse the created common ejs file like header and footer  -->
     <%- include("header.ejs") %>
     <br />
-    <table border="1">
-      <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>DueDate</th>
-        <th>completed?</th>
-      </tr>
-      <% for(let i=0;i<allTodos.length; i++) { %>
-        <tr>
-          <td><%= allTodos[i].id %></td>
-          <td><%= allTodos[i].title %></td>
-          <td><%= allTodos[i].dueDate %></td>
-          <td><%= allTodos[i].completed %></td>
-        </tr>
-      <% } %>
-    </table>
+    <%- include("todos.ejs") %> <%- include("footer.ejs") %>
   </body>
 </html>
